<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.ribic.nejc.dragonhack.ui.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/loginTextColor"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textColor="@color/loginTextColor"
        android:textSize="16sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/loginTextColor"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/loginTextColor"
            android:textColorHint="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/loginTextColor"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/loginTextColor" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button_default"
        android:fontFamily="sans-serif-light"
        android:onClick="loginMe"
        android:text="@string/login"
        android:foreground="@drawable/main_ripple"
        android:textColor="@android:color/white" />


    <Button
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:text="@string/register"
        android:fontFamily="sans-serif-light"
        android:onClick="registerMe"
        android:foreground="@drawable/main_ripple"
        android:background="@drawable/button_empty"
        android:layout_height="wrap_content" />

</LinearLayout>
